# audiodecoder.flac

./: CMakeLists.txt
audiodecoder.flac/: addon.xml  addon.xml.in
src/: FLACCodec.cpp
